# os

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  STATUS.md  build.rs  build_icons.rs  run.sh  rustfmt.toml  test-qemu.sh
kernel/: AUDIT.md  CLAUDE.md  Cargo.toml  DESIGN.md  LOCK-ORDERING.md  PORTING.md  README.md  SAFETY-MAP.md  SYSCALLS.md  address_space.rs  aslr.rs  bench_baselines.toml  build.rs  context.rs  event.rs  handle.rs  heap_va.rs  interrupt.rs  interrupt_controller.rs  intrusive_list.rs  link.ld  main.rs  memory.rs  memory_mapped_io.rs  metrics.rs  paging.rs  power.rs  process.rs  process_exit.rs  proptest.toml  random.rs  relocate.rs  rustfmt.toml  scheduler.rs  scheduling_algorithm.rs  scheduling_context.rs  slab.rs  sync.rs  syscall.rs  system_config.rs  (+5 more)
kernel/arch/: mod.rs
kernel/arch/aarch64/: context.rs  cpu.rs  entropy.rs  interrupt_controller.rs  memory_mapped_io.rs  mod.rs  per_core.rs  power.rs  scheduler.rs  security.rs  serial.rs  timer.rs
kernel/examples/: Cargo.toml  README.md  link.ld
kernel/examples/.cargo/: config.toml
kernel/fuzz/: Cargo.toml  syscall.dict
kernel/fuzz/fuzz_targets/: syscall_multi_thread.rs  syscall_sequence.rs  syscall_single.rs  syscall_structured.rs
kernel/host/: build.rs
kernel/host/.cargo/: config.toml
kernel/host/tests/: hw_device_tree.rs  hw_interrupt_timer.rs  hw_virtqueue.rs  ipc_channel_create_pte_leak.rs  kernel_arch_boundary.rs  kernel_arch_context.rs  kernel_aslr.rs  kernel_bootstrap.rs  kernel_executable.rs  kernel_exit_code.rs  kernel_futex.rs  kernel_handle.rs  kernel_handle_dup.rs  kernel_handle_dynamic.rs  kernel_handle_lifecycle.rs  kernel_handle_send_rollback.rs  kernel_heap_va.rs  kernel_random.rs  kernel_sched_context.rs  kernel_scheduler_percore.rs  kernel_syscall_filter.rs  kernel_system_info.rs  kernel_timer_set_cancel.rs  kernel_vmo.rs  mem_asid.rs  mem_buddy.rs  mem_heap.rs  mem_memory.rs  mem_slab.rs  mem_vma.rs  stress_adversarial_buddy.rs  stress_adversarial_churn.rs  stress_adversarial_pointers_handles.rs  stress_adversarial_slab.rs  stress_alloc_fragmentation.rs  stress_buddy_coalescing.rs  stress_integration.rs
kernel/proptest-regressions/: proptests.txt
kernel/src/: address_space.rs  bench.rs  bootstrap.rs  config.rs  differential.rs  endpoint.rs  event.rs  fault.rs  handle.rs  invariants.rs  irq.rs  lib.rs  main.rs  pipeline.rs  post.rs  print.rs  proptests.rs  resource.rs  sched.rs  syscall.rs  table.rs  thread.rs  types.rs  verification.rs  vmo.rs
kernel/src/arch/: mod.rs
kernel/src/firmware/: mod.rs
kernel/src/frame/: concurrent_table.rs  fault_resolve.rs  heap.rs  lockdep.rs  mod.rs  profile.rs  ring.rs  slab.rs  state.rs  user_mem.rs
system/host-tests/: Cargo.toml
system/host-tests/tests/: asid.rs  buddy.rs  channel.rs  device_tree.rs  eevdf.rs  elf.rs  executable.rs  handle.rs  heap.rs  heap_routing.rs  slab.rs  virtqueue.rs  vma.rs  waitable.rs
system/kernel/: .gitignore  AUDIT-MISSION.md  CLAUDE.md  CROSS-MODULE-LIFETIMES.md  Cargo.toml  DESIGN.md  HARDENING.md  LOCK-ORDERING.md  PORTING.md  README.md  SAFETY-MAP.md  SYSCALLS.md  TPIDR-CHAIN.md  address_space.rs  address_space_id.rs  aslr.rs  boot.S  build.rs  build.sh  channel.rs  context.rs  device_tree.rs  event.rs  exception.S  executable.rs  futex.rs  handle.rs  heap.rs  interrupt.rs  interrupt_controller.rs  intrusive_list.rs  link.ld  link.ld.in  main.rs  memory.rs  memory_mapped_io.rs  memory_region.rs  metrics.rs  page_allocator.rs  pager.rs  (+24 more)
system/kernel/.cargo/: config.toml
system/kernel/docs/: design-notes.md
system/kernel/examples/: Cargo.toml  README.md
system/kernel/src/: addr_space.rs  address_space.rs  address_space_id.rs  asid.rs  boot.S  channel.rs  device_tree.rs  elf.rs  exception.S  futex.rs  gic.rs  handle.rs  heap.rs  interrupt.rs  interrupt_controller.rs  main.rs  memory.rs  memory_region.rs  metrics.rs  mmio.rs  page_alloc.rs  paging.rs  per_core.rs  percpu.rs  process.rs  process_exit.rs  psci.rs  scheduler.rs  scheduling_algorithm.rs  scheduling_context.rs  serial.rs  slab.rs  sync.rs  syscall.rs  thread.rs  thread_exit.rs  timer.rs  uart.rs  user_test.rs  vma.rs  (+1 more)
system/kernel/test/: Cargo.toml
system/test/: CLAUDE.md  Cargo.toml  build.rs  crash.sh  display-pipeline.sh  integration.sh  smoke.sh  smp-stress.sh  stress.sh  verify.py  visual-test.sh
system/test/tests/: CLAUDE.md  adversarial_boundaries_state.rs  adversarial_buddy.rs  adversarial_churn.rs  adversarial_pointers_handles.rs  adversarial_slab.rs  adversarial_stress.rs  adversarial_vma.rs  analytic_raster.rs  animation.rs  asid.rs  box_blur.rs  buddy.rs  cache.rs  channel.rs  channel_create_leak.rs  channel_create_pte_leak.rs  content_allocator.rs  cross_module.rs  ctype.rs  device_tree.rs  drawing.rs  eevdf.rs  executable.rs  fallback.rs  frame_scheduler.rs  fs_crash.rs  fs_linked.rs  futex.rs  handle.rs  handle_lifecycle.rs  handle_send_rollback.rs  heap.rs  heap_routing.rs  hw_device_tree.rs  hw_interrupt_timer.rs  icons.rs  incremental.rs  integration_stress.rs  interrupt_controller.rs  (+86 more)
system/test/visual/: after-type.spec  click-placement.spec  cursor-dark.spec  cursor-italic.spec  cursor-page.spec  drag-select.spec  font-weights.spec  italic-slant.spec
user/drivers/blk/: Cargo.toml
user/drivers/input/: Cargo.toml
user/drivers/render/: Cargo.toml
user/editors/text/: CLAUDE.md  Cargo.toml
user/servers/audio/: Cargo.toml
user/servers/document/: Cargo.toml
user/servers/jpeg-decoder/: Cargo.toml
user/servers/layout/: CLAUDE.md  Cargo.toml
user/servers/png-decoder/: Cargo.toml
user/servers/presenter/: Cargo.toml
user/servers/test-layout/: Cargo.toml
user/servers/test-presenter/: Cargo.toml
user/servers/video-decoder/: Cargo.toml
user/shared/audio/: Cargo.toml
user/shared/document/: Cargo.toml
user/shared/jpeg-decoder/: Cargo.toml
user/shared/layout/: Cargo.toml
user/shared/png-decoder/: Cargo.toml
user/shared/presenter/: Cargo.toml
user/shared/store-service/: Cargo.toml
user/shared/test-presenter/: Cargo.toml
user/shared/video-decoder/: Cargo.toml
(+1390 files in other folders)
