[workspace]
members = [
    "kernel",
    "user/libraries/scene",
    "user/libraries/drawing",
    "user/libraries/piecetable",
    "user/libraries/animation",
    "user/libraries/layout",
    "user/libraries/fs",
    "user/libraries/icons",
    "user/libraries/store",
    "user/libraries/fonts",
    "user/libraries/render",
    "user/libraries/png",
    "user/libraries/jpeg",
    "user/libraries/avi",
    "user/libraries/mp4",
]
exclude = ["kernel/fuzz", "user/init", "user/abi", "tools/mkdisk", "tools/mkavi"]
resolver = "3"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
