[workspace]
members = [
    "kernel",
    "user/shared/scene",
    "user/shared/drawing",
    "user/shared/piecetable",
    "user/shared/animation",
    "user/shared/line-break",
    "user/shared/fs",
    "user/shared/icons",
    "user/shared/store",
    "user/shared/fonts",
    "user/shared/render",
    "user/codecs/png",
    "user/codecs/jpeg",
    "user/codecs/avi",
    "user/codecs/mp4",
    "user/shared/view",
    "user/shared/manifest",
]
exclude = ["kernel/fuzz", "user/shared/init", "user/system/abi", "tools/mkdisk", "tools/mkavi"]
resolver = "3"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
