[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[features]
integration-tests = []
fuzzing = []
bench = []

[dependencies]
lock_api = { version = "0.4", default-features = false }
talc = { version = "5", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }

[dev-dependencies]
serial_test = "3"
proptest = "1"
