[package]
name = "text-editor"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[features]
default = ["service"]
service = [
    "dep:abi",
    "dep:console",
    "dep:document-service",
    "dep:name",
    "ipc/kernel",
]

[dependencies]
ipc = { path = "../../system/ipc", default-features = false }

abi = { path = "../../system/abi", optional = true }
console = { path = "../../shared/console", optional = true }
document-service = { path = "../../shared/document", optional = true }
name = { path = "../../shared/name", optional = true }

[workspace]
