[package]
name = "audio-service"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../abi" }
console = { path = "../console" }
init = { path = "../init" }
ipc = { path = "../../ipc" }
name = { path = "../name" }
snd = { path = "../drivers/snd" }
wav = { path = "../../libraries/wav" }

[workspace]
