[package]
name = "document-service"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[features]
default = ["service"]
service = [
    "dep:abi",
    "dep:console",
    "dep:heap",
    "dep:name",
    "dep:store-service",
    "ipc/kernel",
]

[dependencies]
ipc = { path = "../../ipc", default-features = false }

abi = { path = "../../abi", optional = true }
console = { path = "../console", optional = true }
heap = { path = "../../heap", optional = true }
name = { path = "../name", optional = true }
store-service = { path = "../store", optional = true }

[workspace]
