[package]
name = "png-decoder"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../abi" }
console = { path = "../console" }
heap = { path = "../../heap" }
ipc = { path = "../../ipc" }
name = { path = "../name" }
png = { path = "../../libraries/png" }

[workspace]
