[package]
name = "presenter-service"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[features]
default = ["service"]
service = [
    "dep:abi",
    "dep:animation",
    "dep:console",
    "dep:document-service",
    "dep:fonts",
    "dep:fs-service",
    "dep:heap",
    "dep:layout",
    "dep:layout-service",
    "dep:name",
    "dep:png-decoder",
    "dep:png-lib",
    "dep:render",
    "dep:scene",
    "dep:text-editor",
    "ipc/kernel",
]

[dependencies]
ipc = { path = "../../ipc", default-features = false }

abi = { path = "../../abi", optional = true }
animation = { path = "../../libraries/animation", optional = true }
console = { path = "../console", optional = true }
document-service = { path = "../document", optional = true }
fonts = { path = "../../libraries/fonts", optional = true }
fs-service = { path = "../fs", optional = true }
png-lib = { path = "../../libraries/png", package = "png", optional = true }
heap = { path = "../../heap", optional = true }
layout = { path = "../../libraries/layout", optional = true }
layout-service = { path = "../layout", optional = true }
name = { path = "../name", optional = true }
png-decoder = { path = "../png-decoder", optional = true }
render = { path = "../drivers/render", optional = true }
scene = { path = "../../libraries/scene", optional = true }
text-editor = { path = "../../editors/text", optional = true }

[workspace]
