[package]
name = "presenter-service"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[features]
default = ["service"]
service = [
    "dep:abi",
    "dep:animation",
    "dep:audio-service",
    "dep:console",
    "dep:document-service",
    "dep:fonts",
    "dep:fs-service",
    "dep:heap",
    "dep:icons",
    "dep:init",
    "dep:layout",
    "dep:layout-service",
    "dep:name",
    "dep:piecetable",
    "dep:jpeg-decoder",
    "dep:video-decoder",
    "dep:render",
    "dep:store-service",
    "dep:scene",
    "dep:text-editor",
    "ipc/kernel",
]

[dependencies]
ipc = { path = "../../ipc", default-features = false }

abi = { path = "../../abi", optional = true }
animation = { path = "../../libraries/animation", optional = true }
audio-service = { path = "../audio", optional = true }
console = { path = "../console", optional = true }
document-service = { path = "../document", optional = true }
fonts = { path = "../../libraries/fonts", optional = true }
fs-service = { path = "../fs", optional = true }
heap = { path = "../../heap", optional = true }
icons = { path = "../../libraries/icons", optional = true }
init = { path = "../init", optional = true }
jpeg-decoder = { path = "../jpeg-decoder", optional = true }
layout = { path = "../../libraries/layout", optional = true }
layout-service = { path = "../layout", optional = true }
name = { path = "../name", optional = true }
piecetable = { path = "../../libraries/piecetable", optional = true }
render = { path = "../drivers/render", optional = true }
scene = { path = "../../libraries/scene", optional = true }
store-service = { path = "../store", optional = true }
text-editor = { path = "../../editors/text", optional = true }
video-decoder = { path = "../video-decoder", optional = true }

[workspace]
