[package]
name = "test-presenter"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../abi" }
console = { path = "../console" }
document-service = { path = "../document" }
heap = { path = "../../heap" }
ipc = { path = "../../ipc" }
name = { path = "../name" }
presenter-service = { path = "../presenter" }
scene = { path = "../../libraries/scene" }

[workspace]
