[package]
name = "video-decoder"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../abi" }
avi = { path = "../../libraries/avi" }
console = { path = "../console" }
heap = { path = "../../heap" }
ipc = { path = "../../ipc" }
mp4 = { path = "../../libraries/mp4" }
name = { path = "../name" }
video = { path = "../drivers/video" }

[workspace]
