[package]
name = "jpeg-decoder"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../system/abi" }
console = { path = "../console" }
heap = { path = "../../system/heap" }
ipc = { path = "../../system/ipc" }
jpeg = { path = "../../codecs/jpeg" }
name = { path = "../name" }

[workspace]
