[package]
name = "video-decoder"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
abi = { path = "../../system/abi" }
audio-service = { path = "../audio" }
avi = { path = "../../codecs/avi" }
console = { path = "../console" }
heap = { path = "../../system/heap" }
ipc = { path = "../../system/ipc" }
mp4 = { path = "../../codecs/mp4" }
name = { path = "../name" }
video = { path = "../../drivers/video" }

[workspace]
